# linklike

./: Cargo.toml  LICENSE  README.md
src/: collision.rs  ecs.rs  get.rs  item.rs  level.rs  main.rs  player.rs  sprite.rs  sword.rs
src/assets/: mod.rs  player.rs
src/collision/: mod.rs
src/enemies/: basic_enemy.rs  mod.rs
src/npc/: advanced_enemy.rs  basic_enemy.rs  basic_stats.rs  mod.rs
src/player/: controller.rs  inventory.rs  mod.rs
src/protag/: controller.rs  inventory.rs  mod.rs
src/protag/items/: mod.rs  sword.rs
